# ai-books

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  pipe.py  pyproject.toml
app/: main.py  schemas.py  services.py
frontend/: frontend.Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: books.js
frontend/src/components/: BookChooser.jsx  Footer.jsx  Header.jsx  QASection.jsx  StatusMessage.jsx
frontend/src/hooks/: useBookSearch.js  useRagQA.js
